--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,8 @@
 [versions]
 agp = "8.2.0-alpha13"
+sqldelight = "2.0.0"
+sqldelight-plugin = "2.0.0-rc02"
+sqldelight-coroutines = "2.0.0-alpha05"
 koin-android = "3.4.3"
 koin-androidx-compose = "3.4.6"
 kotest-assertions-core = "5.6.2"
@@ -17,6 +20,8 @@ mockk = "1.13.5"
 play-services-location = "21.0.1"
 
 [libraries]
+sqldelight = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
+sqldelight-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight-coroutines" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin-android" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin-androidx-compose" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest-assertions-core" }
@@ -42,4 +47,5 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight-plugin" }
 
