--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.2.0-alpha13"
+kotlinx-datetime = "0.4.0"
 sqldelight = "2.0.0"
 sqldelight-plugin = "2.0.0-rc02"
 sqldelight-coroutines = "2.0.0-alpha05"
@@ -20,6 +21,7 @@ mockk = "1.13.5"
 play-services-location = "21.0.1"
 
 [libraries]
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 sqldelight = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight-coroutines" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin-android" }
