--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,8 @@
 agp = "8.2.0-alpha13"
 kotlinx-datetime = "0.4.0"
 sqldelight = "2.0.0"
-sqldelight-plugin = "2.0.0-rc02"
-sqldelight-coroutines = "2.0.0-alpha05"
+sqldelight-plugin = "2.0.0"
+sqldelight-coroutines = "2.0.0"
 koin-android = "3.4.3"
 koin-androidx-compose = "3.4.6"
 kotest-assertions-core = "5.6.2"
