--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ koin-androidx-compose = "3.4.6"
 kotest-assertions-core = "5.6.2"
 kotest-runner-junit5 = "5.6.2"
 mapbox = "10.15.0"
+mapbox-turf = "6.13.0"
 kotlin = "1.8.10"
 core-ktx = "1.9.0"
 junit = "4.13.2"
@@ -31,6 +32,7 @@ koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", versi
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest-assertions-core" }
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest-runner-junit5" }
 mapbox = { module = "com.mapbox.maps:android", version.ref = "mapbox" }
+mapbox-turf = { module = "com.mapbox.mapboxsdk:mapbox-sdk-turf", version.ref = "mapbox-turf" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
