Fix stupid db bug caused by backup. Removed backup option from manifest, fix queries, add version do db

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.2.0-alpha13"
+agp = "8.2.0-beta03"
 kotlinx-datetime = "0.4.0"
 sqldelight = "2.0.0"
 sqldelight-plugin = "2.0.0"
