--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ mockk = "1.13.5"
 play-services-location = "21.0.1"
 androidx-work = "2.8.1"
 ktor = "2.3.4"
+serialization = "1.8.10"
 
 [libraries]
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
@@ -62,4 +63,4 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight-plugin" }
-
+serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "serialization" }
