--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.2.0-beta03"
 kotlinx-datetime = "0.4.0"
+navigation-compose = "2.7.3"
 sqldelight = "2.0.0"
 sqldelight-plugin = "2.0.0"
 sqldelight-test-driver = "2.0.0"
@@ -26,6 +27,7 @@ ktor = "2.3.4"
 serialization = "1.8.10"
 
 [libraries]
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 sqldelight = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-test-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight-test-driver" }
