--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,8 @@ accompanist-permissions = "0.30.1"
 agp = "8.2.0-beta03"
 kotlinx-datetime = "0.4.0"
 navigation-compose = "2.7.3"
+paging-compose = "3.3.0-alpha02"
+paging-runtime-ktx = "3.2.1"
 sqldelight = "2.0.0"
 sqldelight-plugin = "2.0.0"
 sqldelight-test-driver = "2.0.0"
@@ -30,6 +32,8 @@ serialization = "1.8.10"
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permissions" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging-compose" }
+androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "paging-runtime-ktx" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 sqldelight = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-test-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight-test-driver" }
