--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ activity-compose = "1.7.2"
 compose-bom = "2023.03.00"
 mockk = "1.13.5"
 play-services-location = "21.0.1"
-androidx-work = "2.8.1"
+androidx-work = "2.9.0-beta01"
 ktor = "2.3.4"
 serialization = "1.8.10"
 
