--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,8 @@ agp = "8.2.0-beta03"
 kotlinx-datetime = "0.4.0"
 navigation-compose = "2.7.3"
 paging-compose = "3.3.0-alpha02"
-paging-runtime-ktx = "3.2.1"
+paging-runtime-ktx = "3.3.0-alpha02"
+paging-testing = "3.2.0-alpha05"
 sqldelight = "2.0.0"
 sqldelight-plugin = "2.0.0"
 sqldelight-test-driver = "2.0.0"
@@ -34,8 +35,10 @@ pullrefresh = "1.0.0"
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permissions" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
+androidx-paging-common = { module = "androidx.paging:paging-common", version.ref = "paging-runtime-ktx" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging-compose" }
 androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "paging-runtime-ktx" }
+androidx-paging-testing = { module = "androidx.paging:paging-testing", version.ref = "paging-testing" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 sqldelight = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-test-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight-test-driver" }
