--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 accompanist-permissions = "0.30.1"
 agp = "8.2.0-beta03"
+coil-compose = "2.5.0"
 datastore-preferences = "1.0.0"
 kotlinx-datetime = "0.4.0"
 navigation-compose = "2.7.3"
@@ -41,6 +42,7 @@ androidx-paging-common = { module = "androidx.paging:paging-common", version.ref
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging-compose" }
 androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "paging-runtime-ktx" }
 androidx-paging-testing = { module = "androidx.paging:paging-testing", version.ref = "paging-testing" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil-compose" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 sqldelight = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-test-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight-test-driver" }
