--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist-permissions = "0.30.1"
-agp = "8.2.0-beta03"
+agp = "8.2.0-rc03"
 coil-compose = "2.5.0"
 datastore-preferences = "1.0.0"
 kotlinx-datetime = "0.4.0"
