--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ ktor = "2.3.4"
 serialization = "1.8.10"
 turbine = "1.0.0"
 pullrefresh = "1.0.0"
+coil-compose = "2.5.0"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permissions" }
