--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.idea
+/.idea/misc.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea
 .DS_Store
 /build
 /captures
